[tool.poetry]
name = "noterpy"
version = "0.1.0"
description = "Notes and task management system"
authors = ["Devansh3712 <devanshamity@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
