[tool.poetry]
name = "noterpy"
version = "0.1.0"
description = "Notes and task management system"
authors = ["Devansh3712 <devanshamity@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mysql-connector-python = "^8.0.23"
mysql-connector = "^2.2.9"
mysqlclient = "^2.0.3"
onetimepad = "^1.4"
playsound = "^1.2.2"
pyttsx3 = "^2.90"
SpeechRecognition = "^3.8.1"
sqlparse = "^0.4.1"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
